added full navigation to all pages

--- a/about.html
+++ b/about.html
@@ -12,10 +12,13 @@
     </head>
     <body>
         <header>
-            <h1>A Bit About Myself</h2>
+            <h1>A Bit About Myself</h1>
             <nav>
                 Navigation
                 <ul>
+                    <li>
+                        <a href=./index.html>Main</a>
+                    </li>
                     <li>
                         <a href=./about.html>About</a>
                     </li>
@@ -26,12 +29,14 @@
             </nav>
         </header>
         <article>
+            <h2>Martin Davis</h2>
             <p>
                 I am a chemist with experience in product, process and equipment development projects.
                 I am currently taking a Software Developer training program and would like to find a position in
                 which I can use my innovation, problem solving and data analysis skills together with my
                 new software skills.
             </p>
+            <br>
             <p>
                 When I am not working or studying, here are a few things I like to do:
             </p>
