--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
                 Navigation
                 <ul>
                     <li>
+                        <a href=./index.html>Main</a>
+                    </li>
+                    <li>
                         <a href=./about.html>About</a>
                     </li>
                     <li>
