completed website with all 3 pages

--- a/about.html
+++ b/about.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>html Assignment - Martin Davis</title>
+        <title>Martin Davis - about</title>
         <meta author="Martin Davis">
         <meta charset="UTF-8">
         <meta description="webpage about me for class assignment">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" href="./img/favicon">
+        <link rel="icon" href="./img/favicon.png">
         <link rel="stylesheet" href="./css/main.css">
         <script src="./js/scripts.js"></script>
     </head>
@@ -29,6 +29,7 @@
             </nav>
         </header>
         <article>
+            <img src="./img/Me.jpg" alt="My Picture" title="This is me!" width="200">
             <h2>Martin Davis</h2>
             <p>
                 I am a chemist with experience in product, process and equipment development projects.
@@ -36,7 +37,6 @@
                 which I can use my innovation, problem solving and data analysis skills together with my
                 new software skills.
             </p>
-            <br>
             <p>
                 When I am not working or studying, here are a few things I like to do:
             </p>
