--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>>
+<!DOCTYPE html>
 <html>
     <head>
         <title>html Assignment - Martin Davis</title>
@@ -6,7 +6,7 @@
         <meta charset="UTF-8">
         <meta description="website for class assignment">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" href="./img/favicon">
+        <link rel="icon" href="./img/favicon.png">
         <link rel="stylesheet" href="./css/main.css">
         <script src="./js/scripts.js"></script>
     </head>
