--- a/contact.html
+++ b/contact.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>html Assignment - Martin Davis</title>
+        <title>Martin Davis - contact</title>
         <meta author="Martin Davis">
         <meta charset="UTF-8">
         <meta description="website for class assignment">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" href="./img/favicon">
+        <link rel="icon" href="./img/favicon.png">
         <link rel="stylesheet" href="./css/main.css">
         <script src="./js/scripts.js"></script>
     </head>
@@ -42,8 +42,8 @@
                 <input type="text" name="email" placeholder="Enter your email...">
             </label>
             <label for=phone-number>
-                Email
-                <input type="tel" name="phone-number" placeholder="Enter your telephone number...">
+                Phone
+                <input type="tel" name="phone-number" placeholder="Enter your phone number...">
             </label>
             <p>Are you contacting me about:</p>
             <label>
@@ -58,8 +58,8 @@
             <label for="contact-means">
                 Choose your preffered means of contact:
                 <select name="contact-means">
-                    <option value="email">Email</option>
-                    <option value="Telephone">Telephone</option>
+                    <option value="Email">Email</option>
+                    <option value="Phone">Phone</option>
                 </select>
             </label>
             <br>
