--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
                 You can also <a href=./contact.html>contact me</a>.
             </p>
             <p>
+                Or you can go straight to look at my <a href="#favourite-bands">favourite bands</ahref>!
+            </p>
+            <p>
                 This is a map of the city where I live:
             </p>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d151687.3672759675!2d-113.6328033236667!3d53.55571252006757!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x53a0224580deff23%3A0x411fa00c4af6155d!2sEdmonton%2C%20AB!5e0!3m2!1sen!2sca!4v1582067481564!5m2!1sen!2sca" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
@@ -48,5 +51,9 @@
                 This is one of my all time favorite music videos!
             </p>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/K4dx42YzQCE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>        </article>
-    </body>
+            <p id="favourite-bands">
+                These are my favourite bands:
+            </p>
+            <br><br>
+        </body>
 </html>
