added additional content for internal link to reference

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 You can also <a href=./contact.html>contact me</a>.
             </p>
             <p>
-                Or you can go straight to look at my <a href="#favourite-bands">favourite bands</ahref>!
+                Or you can go straight to look at my <a href="#favourite-bands">favourite bands</a>!
             </p>
             <p>
                 This is a map of the city where I live:
@@ -54,6 +54,12 @@
             <p id="favourite-bands">
                 These are my favourite bands:
             </p>
+            <ol>
+                <li>Pink Floyd</li>
+                <li>Led Zeppelin</li>
+                <li>Pearl Jam</li>
+                <li>The Verve</li>
+            </ol>
             <br><br>
         </body>
 </html>
