added more CSS formatting

--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
                 <input type="tel" name="phone-number" placeholder="Enter your phone number...">
             </label>
             <p>Are you contacting me about:</p>
-            <label>
+            <label id=work-radio>
                 <input type="radio" name="subject" value="work">
                 Work
             </label>
@@ -66,6 +66,6 @@
             <p>Leave me a brief message.</p>
             <textarea name="comment" form="usrform" placeholder="Enter text here..." cols="40" rows="4"></textarea>
             <br><br>
-            <input type="submit" value="Submit Form">
+            <input type="submit" value="Submit Form" id="sub-button">
         </form>
  
