added formatting in css stylesheet

--- a/about.html
+++ b/about.html
@@ -46,4 +46,8 @@
                 <li>Birdwatching</li>
             </ul>
         </article>
-    
+        <footer>
+            &copy;Martin Davis 2020
+        </footer>
+    </body>
+</html>    
