--- a/contact.html
+++ b/contact.html
@@ -68,4 +68,8 @@
             <br><br>
             <input type="submit" value="Submit Form" id="sub-button">
         </form>
- 
+        <footer>
+            &copy;Martin Davis 2020
+        </footer>
+    </body>
+</html>
