--- a/index.html
+++ b/index.html
@@ -61,5 +61,8 @@
                 <li>The Verve</li>
             </ol>
             <br><br>
+            <footer>
+                &copy;Martin Davis 2020
+            </footer>
         </body>
 </html>
