Completed initial formatting with stylesheet

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
             <h2>My Assignment Website</h2>
             <p>
                 This website has been made as a class assignment
-                to practice using html.
+                to practice using html. Additionally, a css stylesheet
+                has been used for some formatting.
             </p>
             <p>
                 You can read <a href=./about.html>about me</a>.
@@ -51,7 +52,7 @@
                 This is one of my all time favorite music videos!
             </p>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/K4dx42YzQCE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>        </article>
-            <p id="favourite-bands">
+            <p class="item-intro" id="favourite-bands">
                 These are my favourite bands:
             </p>
             <ol>
