--- a/contact.html
+++ b/contact.html
@@ -37,6 +37,7 @@
                 Last name
                 <input type="text" name="last-name" placeholder="Enter your last name...">
             </label>
+            <br><br>
             <label for=email>
                 Email
                 <input type="text" name="email" placeholder="Enter your email...">
@@ -45,7 +46,7 @@
                 Phone
                 <input type="tel" name="phone-number" placeholder="Enter your phone number...">
             </label>
-            <p>Are you contacting me about:</p>
+            <p>You are contacting me about:</p>
             <label id=work-radio>
                 <input type="radio" name="subject" value="work">
                 Work
@@ -56,7 +57,7 @@
             </label>
             <br><br>
             <label for="contact-means">
-                Choose your preffered means of contact:
+                Choose your preferred means of contact:
                 <select name="contact-means">
                     <option value="Email">Email</option>
                     <option value="Phone">Phone</option>
@@ -67,6 +68,7 @@
             <textarea name="comment" form="usrform" placeholder="Enter text here..." cols="40" rows="4"></textarea>
             <br><br>
             <input type="submit" value="Submit Form" id="sub-button">
+            <br><br>
         </form>
         <footer>
             &copy;Martin Davis 2020
